# PaddleOCR-MCP

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  MCP_README.md  PUBLISH.md  README.md  publish.ps1  publish.sh  pyproject.toml  test_language.py
code-reading/: README.md  api-flow.md  architecture.md  code-reading.md  key-modules.md
paddleocr_cli/: __init__.py  __main__.py  main.py  mcp_server.py
tests/: __init__.py  test_mcp_server.py
