[project]
name = "fast-paddleocr-mcp"
version = "0.1.4"
description = "Fast PaddleOCR MCP server - Extract text from images using PaddleOCR with optimized performance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PaddleOCR-MCP Contributors"}
]
keywords = ["paddleocr", "ocr", "mcp", "model-context-protocol", "text-recognition", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "pillow>=10.0.0",
]

[project.scripts]
fast-paddleocr-mcp = "paddleocr_cli.mcp_server:main"

[project.urls]
Homepage = "https://github.com/trotsky1997/PaddleOCR-MCP"
Documentation = "https://github.com/trotsky1997/PaddleOCR-MCP#readme"
Repository = "https://github.com/trotsky1997/PaddleOCR-MCP"
Issues = "https://github.com/trotsky1997/PaddleOCR-MCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paddleocr_cli"]
